hphp/hack/test/enum_class/typing/typing6.bad.php.exp
File "typing6.bad.php", line 13, characters 26-27:
Invalid argument (Typing[4110])
  File "typing6.bad.php", line 13, characters 9-14:
  Expected `string`
  File "typing6.bad.php", line 13, characters 9-14:
  This type argument to `Box` must match exactly (it is invariant)
  File "typing6.bad.php", line 13, characters 26-27:
  But got `int`
